--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
     <script type="text/javascript" src="//use.typekit.net/adk4phw.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stilins.css">
   </head>
   <body>
     <div class="wrapper">
@@ -102,6 +102,6 @@
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="skripts.js"></script>
   </body>
 </html>
